asset/main.css
body  {
	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
	margin: 0 auto;
	max-width: 1100px;
	font-size: 120%;
	line-height: 1.4em;
	--bg: rgb(250,250,250);
	background: var(--bg);
	overflow: hidden;
}
*, ::after, ::before {
	box-sizing: border-box;
}

figure {
	text-align: center;
	position: relative;
}
figure img {
	filter: grayscale(.3);
	clip-path: ellipse(44% 50% at 44% 50%);
	margin-left: 16px;
	user-select: none;
}
svg.name {
	width: 150px;
}
svg.metaball {
	position: absolute;
	max-width: 100vw;
	height: 125%;
	top: -25%;
	left: 50%;
	transform: translate(-50%, 0);
	stroke-width: 6;
	fill: var(--bg);
	stroke: #eee;
}
#circle2 {
	stroke: none;
}
text {
	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
	font-size: 14px;
}
figcaption {
	font-size: 1em;
	line-height: 2em;
	position: relative;
}

main {
	margin-top: 7em;
}
.r {
	display: flex;
	justify-content: center;
	align-items: center;
}

.links a {
	padding: 6px;
	margin: .5em 1em;
	text-decoration: none;
}

@media (max-width: 600px) {
	.links {
		flex-direction: column;
	}
	main {
		margin-top: 2em;
	}
	svg.metaball {
		max-width: 160vw;
		top: -29%;
		transform: translate(-50%, 0) rotate(90deg);
	}
}

section {
	margin: 2em 1em;
}

.ripple {
	border-radius: 50%;
	position: absolute;
/*	width: calc(2px*var(--ripple-radius));
	height: calc(2px*var(--ripple-radius));*/
	display: inline-block;
	opacity: 0.66;
	user-select: none;
	pointer-events: none;
}

